--- a/src/frontend-proxy/envoy.tmpl.yaml
+++ b/src/frontend-proxy/envoy.tmpl.yaml
@@ -37,19 +37,13 @@ static_resources:
                       domains:
                         - "*"
                       routes:
-                        - match: { path: "/loadgen" }
-                          redirect: { path_redirect: "/loadgen/" }
-                        - match: { prefix: "/loadgen/" }
+                        - match: { prefix: "/loadgen" }
                           route: { cluster: loadgen, prefix_rewrite: "/" }
                         - match: { prefix: "/otlp-http/" }
                           route: { cluster: opentelemetry_collector_http, prefix_rewrite: "/" }
-                        - match: { path: "/jaeger" }
-                          redirect: { path_redirect: "/jaeger/" }
-                        - match: { prefix: "/jaeger/" }
+                        - match: { prefix: "/jaeger" }
                           route: { cluster: jaeger }
-                        - match: { path: "/grafana" }
-                          redirect: { path_redirect: "/grafana/" }
-                        - match: { prefix: "/grafana/" }
+                        - match: { prefix: "/grafana" }
                           route: { cluster: grafana }
                         - match: { prefix: "/images/" }
                           route: { cluster: image-provider, prefix_rewrite: "/" }
@@ -57,7 +51,7 @@ static_resources:
                           route: { cluster: flagservice, prefix_rewrite: "/", timeout: 0s }
                         - match: { prefix: "/feature" }
                           route: { cluster: flagd-ui }
-                        - match: { prefix: "/" } # Default/catch-all route - keep last since prefix:"/" matches everything
+                        - match: { prefix: "/" }
                           route: { cluster: frontend }
                 http_filters:
                   - name: envoy.filters.http.fault
